--- a/src/scss/parts/_scaffolding.scss
+++ b/src/scss/parts/_scaffolding.scss
@@ -208,6 +208,7 @@ i.moss-icon {
   justify-content: center;
   align-items: center;
   align-self: center;
+  vertical-align: middle;
   width: 1em;
   height: 1em;
 
